# Fabrication-utilities

./: .cruft.json  .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/how_to/: contribute_to_the_documentation.md  contribute_to_this_plugin.md  install_this_plugin.md
docs/reference/: references.md
src/fabrication_utilities/: readme.md
src/fabrication_utilities/apps/: __init__.py  addapp.py  directories.py  equipmentapp.py  material.py  menu_steps.py  processapp.py  removeapp.py  stepapp.py  transapp.py
src/fabrication_utilities/example_uploads/: __init__.py
src/fabrication_utilities/example_uploads/processes/: Processo_prova.archive.json  Prova_PEB.archive.json  Prova_cleaning.archive.json  Prova_coating.archive.json  Prova_drying.archive.json  Prova_ebl.archive.json  Prova_soft_bake.archive.json  Prova_spin_develop.archive.json  Prova_stripping.archive.json  README.md
src/fabrication_utilities/schema_packages/: Items.py  __init__.py  fabrication_utilities.py  materials.py  utils.py
src/fabrication_utilities/schema_packages/calculus/: calculus.py
src/fabrication_utilities/schema_packages/equipments/: equipments.py  utils.py
src/fabrication_utilities/schema_packages/steps/: transform.py  utils.py
src/fabrication_utilities/schema_packages/steps/add/: __init__.py
src/fabrication_utilities/schema_packages/steps/add/integration/: __init__.py  bonding.py
src/fabrication_utilities/schema_packages/steps/add/synthesis/: CVD.py  __init__.py  coating.py  electron_gun.py  sog.py  sputtering.py
src/fabrication_utilities/schema_packages/steps/remove/: __init__.py
src/fabrication_utilities/schema_packages/steps/remove/developing/: __init__.py  development.py
src/fabrication_utilities/schema_packages/steps/remove/drying/: __init__.py  drying.py
src/fabrication_utilities/schema_packages/steps/remove/etching/: __init__.py  dry_etching.py  stripping.py  wet_etching.py
src/fabrication_utilities/schema_packages/steps/transform/: __init__.py
src/fabrication_utilities/schema_packages/steps/transform/dicing/: __init__.py  dicing.py
src/fabrication_utilities/schema_packages/steps/transform/lithography/: __init__.py  ebl.py  fib.py  labeling.py
src/fabrication_utilities/schema_packages/steps/transform/thermal_process/: __init__.py  annealing.py  baking.py  oxidation.py
tests/apps/: test_app.py
tests/data/: icp.archive.yaml
tests/schema_packages/: test_schema_package.py
